<resources>
    <string name="app_name">Dmm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>

    <!--  BluetoothViewer -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>

    <string name="btstatus_connected_to_fmt">connected to DMM.</string>
    <string name="btstatus_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="title_select_device">Select a device to connect to</string>
    <string name="label_scanning">Scanning…</string>
    <string name="label_no_available_devices">No devices found</string>
    <string name="title_mock_devices">Mock Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_email_recorded_data">Email recorded data</string>

    <string name="email_client_chooser">Choose an email app…</string>
    <string name="no_email_client">Could not find an email client, cannot send message :(</string>
    <string name="fmt_subject_recorded_data">Recorded data: %s</string>
    <string name="fmt_recorded_from">See attached data recorded from bluetooth device: %s</string>

    <string name="pref_record">record</string>
    <string name="title_record">Enable data-logging</string>
    <string name="summary_record">Record bluetooth data</string>

    <string name="pref_default_email">default_email</string>
    <string name="title_default_email">Default email address</string>
    <string name="summary_default_email">Set default email address to send recordings</string>

    <string name="title_settings_activity">Settings</string>
    <string name="msg_nothing_recorded">Nothing recorded, nothing to send.</string>
    <string name="msg_nothing_recorded_recording_disabled">Nothing recorded. Enable data-logging in the Settings menu.</string>
    <string name="msg_email_sent">Email sent.</string>
    <string name="msg_email_not_sent">Email not sent. Check your email settings.</string>
    <string name="mobile_dmm">Mobile-DMM</string>
    <string name="version_no">Version: #####</string>
    <string name="nav_current">Current</string>
    <string name="nav_resistance">Resistance</string>
    <string name="nav_voltage">Voltage</string>
    <string name="nav_data_logging">Data logging</string>
    <string name="nav_chart_realtime">Real-time graph</string>
    <string name="title_graph_activity">Graph</string>
    <string name="nav_settings_string">Graph Settings</string>

    <string name="settings_background_title">Enable background</string>
    <string name="settings_background_description">Fills in the graph with a light blue coloring</string>
    <string name="setting_volts_div_title">Volts/Div</string>
    <string name="setting_volts_div_description">Sets the amount of Volts per division</string>
    <string name="setting_time_div_description">Sets the amount of time per division</string>
    <string name="setting_time_div_title">Time/Div</string>

    <string name="setting_background">setting_background</string>
    <string name="setting_time_div">setting_time_div</string>
    <string name="setting_volts_div">setting_volts_div</string>
    <string name="toggle_log">Toggle Log</string>
    <string name="spinner_continuity">Continuity</string>
    <string name="spinner_measurements">Measurements</string>
</resources>