<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<CheckBoxPreference-->
    <!--android:checked="false"-->
    <!--android:key="@string/pref_record"-->
    <!--android:summary="@string/summary_record"-->
    <!--android:title="@string/title_record" />-->

    <!--<EditTextPreference-->
    <!--android:checked="false"-->
    <!--android:key="@string/pref_default_email"-->
    <!--android:phoneNumber="false"-->
    <!--android:summary="@string/summary_default_email"-->
    <!--android:title="@string/title_default_email" />-->

    <CheckBoxPreference
        android:checked="false"
        android:key="@string/pref_background"
        android:summary="@string/settings_background_description"
        android:title="@string/settings_background" />

    <EditTextPreference
        android:checked="false"
        android:key="setting_volts_per_div"
        android:numeric="decimal"
        android:phoneNumber="false"
        android:summary="@string/setting_volts_div_description"
        android:title="@string/setting_volts_div_title" />
    <EditTextPreference
        android:checked="false"
        android:key="@string/setting_time_div"
        android:numeric="decimal"
        android:phoneNumber="false"
        android:summary="@string/setting_time_div_description"
        android:title="@string/setting_time_div_title" />


</PreferenceScreen>